k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitter-clone-ingress-service
  namespace: twitter-clone
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: my-twitter-clone.com
      http:
        paths:
          - path: /post-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: post-service-cluster-ip-service
                port:
                  number: 8082
          - path: /account-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: account-service-cluster-ip-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vue-app-cluster-ip-service
                port:
                  number: 8081
